--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@ for = "/*"
     default-src 'self';
     img-src 'self' data: https://aforscuttdesign.imgix.net https://aforscutt.co.uk https://aforscuttdesign.netlify.app;
     font-src 'self' data: https://aforscutt.co.uk https://aforscuttdesign.netlify.app;
-    script-src 'self';
+    script-src 'self' data: https://aforscutt.co.uk https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
     style-src 'self' 'unsafe-inline';
   """
   Cache-Control = "max-age=31536000, immutable"
