--- a/netlify.toml
+++ b/netlify.toml
@@ -2,26 +2,29 @@
   command = "npm run build"
   publish = "dist"
 
+# GLOBAL SECURITY HEADERS
 [[headers]]
-for = "/*"
-[headers.values]
-  X-Frame-Options = "DENY"
-  X-XSS-Protection = "1; mode=block"
-  Referrer-Policy = "no-referrer"
-  X-Content-Type-Options = "nosniff"
-  Content-Security-Policy = """
-    default-src 'self';
-    img-src 'self' data: https://aforscuttdesign.imgix.net https://aforscutt.co.uk https://aforscuttdesign.netlify.app;
-    font-src 'self' data: https://fonts.googleapis.com https://fonts.gstatic.com https://maxcdn.bootstrapcdn.com https://aforscutt.co.uk https://aforscuttdesign.netlify.app;
-    script-src 'self' data: https://aforscutt.co.uk https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com;
-    style-src 'self' 'unsafe-inline' data: https://fonts.googleapis.com https://maxcdn.bootstrapcdn.com;
-  """
-  Cache-Control = "max-age=31536000, immutable"
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=(), interest-cohort=()"
+    Cross-Origin-Opener-Policy = "same-origin"
+    Cross-Origin-Resource-Policy = "same-origin"
+    Cross-Origin-Embedder-Policy = "unsafe-none"
 
-# Optional SPA fallback
+    Content-Security-Policy = "default-src 'self'; img-src 'self' data: https://aforscuttdesign.imgix.net; font-src 'self' data: https://fonts.gstatic.com https://maxcdn.bootstrapcdn.com; script-src 'self' https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://maxcdn.bootstrapcdn.com; connect-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com; base-uri 'self'; form-action 'self';"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
-force = false
-conditions = { exists = false }
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  conditions = { exists = false }
